Make nv work on all pages, fix alignment for icon

--- a/css/ocs.css
+++ b/css/ocs.css
@@ -1,4 +1,4 @@
-         {outline:1px solid red;}
+     {outline:1px solid red;}
 
         /* BOX SIZING */
 		html {box-sizing:border-box; font-size:14px}
@@ -14,7 +14,7 @@
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #777;
 }
 
 .topnav a {
@@ -40,6 +40,10 @@
 .topnav .icon {
   display: none;
 }
+
+.headImage {background-image:url(images/cubicles.png);}
+.icon {height:102px;}
+.fa {padding-top:25px;}
   
 
       /* MY NAV */
@@ -109,7 +113,7 @@
       section div p {margin:.375rem;}
 
       /* logo */
-      img[src="images/OccupiedFlooringLogo2024Rev.png"]{width:12.5rem;}
+      img[src="images/OccupiedFlooringLogo2024Rev.png"]{width:200px;}
 
       /* Head image box */
       .headImage {height:12rem; width:100%; background-image:url(../images/ShutterstockCommercialBuilding.png); background-repeat:no-repeat; background-size:cover; overflow:hidden; background-position:center 25%;}
